# Andorid-QBreakpad

./: CMakeLists.txt  Main.qml  README.md  qml.qrc
Script/: AnalyzingDumpFileToReportScript.bat
android/: README.md
qml/: Main.qml  qml.qrc
src/: CrashBridge.h  CrashHandler.cpp  CrashHandler.h  main.cpp  qbreakpad_c_api.cpp  qbreakpad_c_api.h  qbreakpad_export.h
